# definit-dsa

./: .gitignore  README.md  definit-workspace.code-workspace  prompts.md  pyproject.toml  requirements-local.txt  todos.md
.github/workflows/: visualization.yml
docs/: defs.json  index.html
docs/assets/: index-B9_qxXNo.js  index-BYJToXVz.js  index-Be8z7zcs.css  index-BjAqSJQ2.js  index-Crrwxy6e.js  index-CzHRaFJe.js  index-DIcNEJOi.js  index-DPhFsSDJ.js  index-DRKibPg1.js  index-DS2xAWC0.js  index-DhEXTtIY.js  index-DzTiCeTQ.css  index-o6AJdhOA.js  index-pn6dwbF1.js  index-txKYMXbv.js
instruction/: create_new_definition.md  create_new_definitions.md  review_definitions.md
src/definit_db/: serialize.py
test/: test_index.py  test_serialize.py  test_stats.py
visualization/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
visualization/scripts/: gen-data.mjs
visualization/src/: App.css  App.tsx  main.ts  types.ts
visualization/src/components/: BottomMenu.tsx  BottomPanel.tsx  CategoriesTab.tsx  DefinitionTab.tsx  FiltersTab.tsx  GraphCanvas.tsx  InfoModal.tsx  ProgressTab.tsx  ResetConfirmModal.tsx  TopMenu.tsx
visualization/src/hooks/: useAppState.ts
visualization/src/lib/: constants.ts  graph.ts  storage.ts
visualization/test-results/: .last-run.json
visualization/tests/: modules.d.ts  setup.ts  tsconfig.json
visualization/tests/e2e/: app.spec.ts
visualization/tests/integration/: app.test.tsx
visualization/tests/unit/: graph.test.ts  (+2 more)
(+166 files in other folders)
